# xTranslator-LocalLLM-Proxy

./: .gitignore  README.md  config.example.toml  config.py  launch.sh  pipeline.py  pyproject.toml  translator_proxy.py
docs/: ToDo.md  handoff.md
test/: __init__.py  test_crlf_batch.py
